@@ -4,7 +4,7 @@ use warnings;
 use Carp;
 use Class::Std;
 
-# ABSTRACT: Encapsulates the Errors contained in Results.
+# ABSTRACT: Encapsulates the grammar/spelling/style Errors contained in Results.
 
 {
 
@@ -91,6 +91,58 @@ __END__
 
 =head1 DESCRIPTION
 
-<description>
+Encapsulates the grammar/spelling/style Errors contained in Results.
 
 =head1 METHODS
+
+=method get_string
+
+    $atd_error->get_string();
+
+Returns the string in error.
+
+=method get_description
+
+    $atd_error->get_description();
+
+Returns a string description of the error.
+
+=method get_precontext
+
+    $atd_error->get_precontext();
+
+Returns a string. Usually the word or words immediately preceding the word or phrase in error.
+
+=method has_suggestions
+
+    $atd_error->has_suggestions();
+
+Returns a boolean (1|0) indicating if the AtD service provided suggestions for fixing the error.
+
+=method get_suggestions
+
+    my @suggestions = $atd_error->get_suggestions();
+
+In some cases, such as spelling, the AtD service may suggest corrections in the form of an array of strings.
+
+=method get_type
+
+    $atd_error->get_type();
+
+Returns a string indicating the type of error. One of I<grammar>, I<spelling>, or I<style>.
+
+=method has_url
+
+    $atd_error->has_url();
+
+Returns a boolean (1|0) indicating if the AtD service provided a URL with more details on the error. This url is suitable for use in UIs.
+
+=method get_url
+
+    $atd_error->get_url();
+
+Returns a url to the AtD service providing details on the error. This url is suitable for use in UIs.
+
+=head1 SEE ALSO
+
+See the L<API Documentation|http://www.afterthedeadline.com/api.slp> at After the Deadline's website.
