@@ -1,6 +1,10 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
-
+    * Finished and corrected documentation.
+    * Updated 01-sanity-atd.t to use 500.500.500 as hostname. Prevents
+      timout issues from services such as OpenDNS trying to nicely
+      resolve bad hostnames.
+    
 1.112970  2011-10-23 22:00:00 EST
     * Original release
